--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,20 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.112.0"
-uvicorn = "^0.30.5"
+fastapi = "0.112.0"
+uvicorn = "0.30.5"
+pyyaml = "6.0.2"
+annotated-types = "0.7.0"
+anyio = "4.4.0"
+click = "8.1.7"
+h11 = "0.14.0"
+idna = "3.7"
+pydantic = "2.8.2"
+pydantic-core = "2.20.1"
+sniffio = "1.3.1"
+sqlalchemy = "2.0.32"
+starlette = "0.37.2"
+typing-extensions = "4.12.2"
 
 
 [build-system]
