--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ sniffio = "1.3.1"
 sqlalchemy = "2.0.32"
 starlette = "0.37.2"
 typing-extensions = "4.12.2"
+mysql-connector-python = "9.0.0"
 
 
 [build-system]
